kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: multi-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: multi-cloud-devops-platform-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
